syntax = "proto3";

package gamemap;

import "common/common.proto";

service gamemap {
	// sync
	rpc SyncCheck(SyncCheckRequest) returns (SyncCheckResponse);
	rpc SyncGameMap(common.Empty) returns (SyncGameMapResponse);

	// send new pattern
	rpc NewPattern(NewPatternRequest) returns (common.Empty);
	
	// stream
	rpc StreamMap(common.Empty) returns (stream StreamMapResponse);
}

message SyncCheckRequest {
	int64 counter = 1;
	string hashedMap = 2;
}

message SyncCheckResponse {
	bool synchronized = 1;
}

message SyncGameMapResponse {
	int64 counter = 1;
	repeated common.Cell map = 2;
}

message NewPatternRequest {
	int64 counter = 1;
	repeated common.Cell pattern = 2;
}

message StreamMapResponse {
	int64 counter = 1;
	repeated common.Cell pattern = 2;
}